Cuda stuff in baseline models

--- a/gru_baseline.ipynb
+++ b/gru_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = torch.device('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = torch.device('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +55,12 @@
     "        for f, file in enumerate(os.listdir(root_dir)):\n",
     "            data = np.load(root_dir + '/' + file)\n",
     "            nchunks = int(np.ceil(data.shape[0]/chunk_size))\n",
-    "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long) for c in range(nchunks)]\n",
-    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
+    "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long, device=dev) for c in range(nchunks)]\n",
+    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool, device=dev) for c in range(nchunks)]\n",
     "            for chunk_start in range(0, data.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, data.shape[0])\n",
     "                size = chunk_end - chunk_start\n",
-    "                self.chunks[ch][:size] = torch.tensor(data[chunk_start:chunk_end])\n",
+    "                self.chunks[ch][:size] = torch.tensor(data[chunk_start:chunk_end], device=dev)\n",
     "                self.masks[ch][:size] = False\n",
     "                ch += 1\n",
     "            \n",
@@ -72,8 +90,8 @@
     "    \n",
     "def collate_fn(batch):\n",
     "    chunk_size = batch[0]['messages'].shape[0]\n",
-    "    sample = {'messages': torch.zeros((chunk_size, len(batch)), dtype=torch.long), \\\n",
-    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool)}\n",
+    "    sample = {'messages': torch.zeros((chunk_size, len(batch)), dtype=torch.long, device=dev), \\\n",
+    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool, device=dev)}\n",
     "    \n",
     "    for b, instance in enumerate(batch):\n",
     "        sample['messages'][:, b] = instance['messages']\n",
@@ -83,67 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5743"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_data = MIDIDataset('train_sc', 200)\n",
+    "train_data = MIDIDataset('train_sc', 1000)\n",
     "len(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1494"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_data = MIDIDataset('test_sc', 200)\n",
+    "test_data = MIDIDataset('test_sc', 1000)\n",
     "len(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,18 +188,105 @@
     "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
-    "model = BaselineGRU(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
+    "model = BaselineGRU(message_dim, embed_dim, hidden_size, recurrent_layers).to(dev)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "loss_fn = torch.nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 2.752546, Test loss: 2.882606\n",
+      "Starting epoch 1\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 2.502642, Test loss: 2.774918\n",
+      "Starting epoch 2\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 2.309583, Test loss: 2.757482\n",
+      "Starting epoch 3\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 2.120018, Test loss: 2.787809\n",
+      "Starting epoch 4\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 1.929709, Test loss: 2.865342\n",
+      "Starting epoch 5\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 1.751558, Test loss: 2.974949\n",
+      "Starting epoch 6\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 1.584261, Test loss: 3.127740\n",
+      "Starting epoch 7\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 1.445844, Test loss: 3.274081\n",
+      "Starting epoch 8\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 1.320667, Test loss: 3.437037\n",
+      "Starting epoch 9\n",
+      "Starting iteration 0\n",
+      "Starting iteration 100\n",
+      "Starting iteration 200\n",
+      "Starting iteration 300\n",
+      "Computing test loss\n",
+      "Computing train loss\n",
+      "Train loss: 1.214668, Test loss: 3.574975\n"
+     ]
+    }
+   ],
    "source": [
     "train_losses = [0 for epoch in range(epochs)]\n",
     "test_losses = [0 for epoch in range(epochs)]\n",
@@ -254,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,35 +366,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<All keys matched successfully>"
+       "BaselineGRU(\n",
+       "  (embedding): Embedding(388, 256)\n",
+       "  (gru): GRU(256, 1024, num_layers=3)\n",
+       "  (logits): Linear(in_features=1024, out_features=388, bias=True)\n",
+       ")"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = BaselineGRU(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
-    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch3.pth'))"
+    "model = BaselineGRU(message_dim, embed_dim, hidden_size, recurrent_layers).to(dev)\n",
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth', map_location=dev))\n",
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample from model\n",
     "def generate_music(model, primer, gen_length=1000):\n",
     "    hidden = None\n",
-    "    gen = torch.tensor(primer).unsqueeze(1)\n",
+    "    gen = torch.tensor(primer, device=dev).unsqueeze(1)\n",
     "    message = gen\n",
     "    for i in range(gen_length):\n",
     "        logits, hidden = model(message, hidden)\n",
@@ -339,20 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated_music = generate_music(model, primer=[16], gen_length=1000)"
+    "generated_music = generate_music(model, primer=[50], gen_length=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('sc_gru_midi_epoch3.npy', generated_music.flatten().detach().numpy())"
+    "np.save('sc_gru_midi.npy', generated_music.cpu().flatten().detach().numpy())"
    ]
   },
   {
@@ -384,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
