--- a/transformer_baseline.ipynb
+++ b/transformer_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = torch.device('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = torch.device('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +55,8 @@
     "        for f, file in enumerate(os.listdir(root_dir)):\n",
     "            data = np.load(root_dir + '/' + file)\n",
     "            nchunks = int(np.ceil(data.shape[0]/chunk_size))\n",
-    "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long) for c in range(nchunks)]\n",
-    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
+    "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long, device=dev) for c in range(nchunks)]\n",
+    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool, device=dev) for c in range(nchunks)]\n",
     "            for chunk_start in range(0, data.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, data.shape[0])\n",
     "                size = chunk_end - chunk_start\n",
@@ -72,8 +90,8 @@
     "    \n",
     "def collate_fn(batch):\n",
     "    chunk_size = batch[0]['messages'].shape[0]\n",
-    "    sample = {'messages': torch.zeros((chunk_size, len(batch)), dtype=torch.long), \\\n",
-    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool)}\n",
+    "    sample = {'messages': torch.zeros((chunk_size, len(batch)), dtype=torch.long, device=dev), \\\n",
+    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool, device=dev)}\n",
     "    \n",
     "    for b, instance in enumerate(batch):\n",
     "        sample['messages'][:, b] = instance['messages']\n",
@@ -83,31 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5743"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = MIDIDataset('train_sc', 200)\n",
     "len(train_data)"
@@ -115,27 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1494"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data = MIDIDataset('test_sc', 200)\n",
     "len(test_data)"
@@ -143,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,9 +134,9 @@
     "        super(PositionalEncoding, self).__init__()\n",
     "        self.dropout = torch.nn.Dropout(p=dropout)\n",
     "\n",
-    "        pe = torch.zeros(max_len, d_model)\n",
-    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-np.log(10000.0) / d_model))\n",
+    "        pe = torch.zeros(max_len, d_model, device=dev)\n",
+    "        position = torch.arange(0, max_len, dtype=torch.float, device=dev).unsqueeze(1)\n",
+    "        div_term = torch.exp(torch.arange(0, d_model, 2, device=dev).float() * (-np.log(10000.0) / d_model))\n",
     "        pe[:, 0::2] = torch.sin(position * div_term)\n",
     "        pe[:, 1::2] = torch.cos(position * div_term)\n",
     "        self.register_buffer('pe', pe)\n",
@@ -188,14 +168,14 @@
     "    # mask: contains False where messages exist, and True otherwise (LxB)\n",
     "    # RETURN: an LxBxD tensor representing the logits for the next message in each batch\n",
     "    def forward(self, seq, mask):\n",
-    "        src_mask = torch.triu(torch.ones((seq.shape[0], seq.shape[0]), dtype=torch.bool))\n",
+    "        src_mask = torch.triu(torch.ones((seq.shape[0], seq.shape[0]), dtype=torch.bool, device=dev))\n",
     "        src_mask.fill_diagonal_(False)\n",
     "        return self.logits(self.encoder(self.position_encoding(self.embedding(seq)), mask=src_mask, src_key_padding_mask=mask.transpose(0, 1)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +209,7 @@
     "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
-    "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size)\n",
+    "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size).to(dev)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "loss_fn = torch.nn.CrossEntropyLoss()"
    ]
@@ -320,61 +300,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size)\n",
-    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth'))"
+    "model = BaselineTransformer(message_dim, embed_dim, heads, attention_layers, ff_size).to(dev)\n",
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth', map_location=dev))\n",
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample from model\n",
     "def generate_music(model, primer, gen_length=1000):\n",
     "    hidden = None\n",
-    "    gen = torch.tensor(primer).unsqueeze(1)\n",
-    "    mask = torch.zeros(gen.shape, dtype=torch.bool)\n",
+    "    gen = torch.tensor(primer, device=dev).unsqueeze(1)\n",
+    "    mask = torch.zeros(gen.shape, dtype=torch.bool, device=dev)\n",
     "    for i in range(gen_length):\n",
     "        logits = model(gen, mask)\n",
     "        message = torch.multinomial(torch.nn.functional.softmax(logits[-1].flatten(), dim=0), 1).view(1, 1)\n",
     "        gen = torch.cat((gen, message))\n",
-    "        mask = torch.cat((mask, torch.zeros((1, 1), dtype=torch.bool)))\n",
+    "        mask = torch.cat((mask, torch.zeros((1, 1), dtype=torch.bool, device=dev)))\n",
     "        \n",
     "    return gen"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated_music = generate_music(model, primer=[16], gen_length=1000)"
+    "generated_music = generate_music(model, primer=[16], gen_length=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('sc_transformer_midi.npy', generated_music.flatten().detach().numpy())"
+    "np.save('sc_transformer_midi.npy', generated_music.cpu().flatten().detach().numpy())"
    ]
   },
   {
@@ -406,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
