--- a/lstm_baseline.ipynb
+++ b/lstm_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = torch.device('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev = torch.device('cuda')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +55,8 @@
     "        for f, file in enumerate(os.listdir(root_dir)):\n",
     "            data = np.load(root_dir + '/' + file)\n",
     "            nchunks = int(np.ceil(data.shape[0]/chunk_size))\n",
-    "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long) for c in range(nchunks)]\n",
-    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool) for c in range(nchunks)]\n",
+    "            self.chunks += [torch.zeros(chunk_size, dtype=torch.long, device=dev) for c in range(nchunks)]\n",
+    "            self.masks += [torch.ones(chunk_size, dtype=torch.bool, device=dev) for c in range(nchunks)]\n",
     "            for chunk_start in range(0, data.shape[0], chunk_size):\n",
     "                chunk_end = min(chunk_start + chunk_size, data.shape[0])\n",
     "                size = chunk_end - chunk_start\n",
@@ -72,8 +90,8 @@
     "    \n",
     "def collate_fn(batch):\n",
     "    chunk_size = batch[0]['messages'].shape[0]\n",
-    "    sample = {'messages': torch.zeros((chunk_size, len(batch)), dtype=torch.long), \\\n",
-    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool)}\n",
+    "    sample = {'messages': torch.zeros((chunk_size, len(batch)), dtype=torch.long, device=dev), \\\n",
+    "              'mask': torch.ones((chunk_size, len(batch)), dtype=torch.bool, device=dev)}\n",
     "    \n",
     "    for b, instance in enumerate(batch):\n",
     "        sample['messages'][:, b] = instance['messages']\n",
@@ -83,31 +101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5743"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = MIDIDataset('train_sc', 200)\n",
     "len(train_data)"
@@ -115,27 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1494"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data = MIDIDataset('test_sc', 200)\n",
     "len(test_data)"
@@ -143,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +188,7 @@
     "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
-    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
+    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers).to(dev)\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "loss_fn = torch.nn.CrossEntropyLoss()"
    ]
@@ -254,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,35 +279,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers)\n",
-    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch4.pth'))"
+    "model = BaselineLSTM(message_dim, embed_dim, hidden_size, recurrent_layers).to(dev)\n",
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth', map_location=dev))\n",
+    "model.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample from model\n",
-    "def generate_music(model, primer, gen_length=1000):\n",
+    "def generate_music(model, primer, gen_length=200):\n",
     "    hidden = None\n",
-    "    gen = torch.tensor(primer).unsqueeze(1)\n",
+    "    gen = torch.tensor(primer, device=dev).unsqueeze(1)\n",
     "    message = gen\n",
     "    for i in range(gen_length):\n",
     "        logits, hidden = model(message, hidden)\n",
@@ -339,20 +309,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generated_music = generate_music(model, primer=[50], gen_length=1000)"
+    "generated_music = generate_music(model, primer=[16], gen_length=200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('sc_lstm_midi.npy', generated_music.flatten().detach().numpy())"
+    "np.save('sc_lstm_midi.npy', generated_music.cpu().flatten().detach().numpy())"
    ]
   },
   {
@@ -384,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
