vae changes that didn't work

--- a/vae_baseline.ipynb
+++ b/vae_baseline.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk_size = 600"
+    "chunk_size = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -122,10 +122,10 @@
     {
      "data": {
       "text/plain": [
-       "2414"
+       "15509"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,10 +150,10 @@
     {
      "data": {
       "text/plain": [
-       "659"
+       "4200"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,6 +193,7 @@
     "        self.latent_size = latent_size\n",
     "        self.conductor_linear = torch.nn.Linear(latent_size, hidden_size)\n",
     "        self.conductor_gru = torch.nn.GRU(1, hidden_size, num_layers=2)\n",
+    "        self.conductor_to_hidden = torch.nn.Linear(hidden_size, hidden_size)\n",
     "        self.gru = torch.nn.GRU(2*hidden_size, hidden_size, num_layers=2)\n",
     "        self.logits = torch.nn.Linear(hidden_size, message_dim)\n",
     "\n",
@@ -216,7 +217,7 @@
     "            \n",
     "            # Teacher forcing\n",
     "            gru_inputs = torch.cat((init_gru_input, forced_input_embed[start:end]), dim=0)\n",
-    "            init_hidden = conductor_hidden.clone()\n",
+    "            init_hidden = torch.tanh(self.conductor_to_hidden(conductor_hidden))\n",
     "            gru_inputs = torch.cat((gru_inputs, init_hidden[0].unsqueeze(0).expand(gru_inputs.shape[0], -1, -1)), dim=2)\n",
     "            output, hidden = self.gru(gru_inputs, init_hidden)\n",
     "            outputs.append(output)\n",
@@ -231,7 +232,7 @@
     "        messages = []\n",
     "        for section in range(nsections):\n",
     "            hid, conductor_hidden = self.conductor_gru(conductor_input, conductor_hidden)\n",
-    "            hidden = conductor_hidden.clone()\n",
+    "            hidden = torch.tanh(self.conductor_to_hidden(conductor_hidden))\n",
     "            gru_input = torch.cat((torch.zeros((1, 1, self.hidden_size)).to(dev), conductor_hidden[0].unsqueeze(0)), dim=2)\n",
     "            \n",
     "            for message in range(self.section_size):\n",
@@ -239,7 +240,7 @@
     "                probs = torch.nn.functional.softmax(self.logits(output), dim=2).flatten()\n",
     "                messages.append(torch.multinomial(probs, 1))\n",
     "                gru_input = torch.cat((embedding(messages[-1]).view(1, 1, -1), conductor_hidden[0].unsqueeze(0)), dim=2)\n",
-    "            \n",
+    "\n",
     "        return [message.item() for message in messages]\n",
     "    \n",
     "class BaselineVAE(torch.nn.Module):\n",
@@ -248,6 +249,7 @@
     "        \n",
     "        self.message_dim = message_dim\n",
     "        self.embedding = torch.nn.Embedding(message_dim, hidden_size)\n",
+    "        self.latent_size = latent_size\n",
     "        self.encoder = VAEEncoder(message_dim, hidden_size, latent_size)\n",
     "        self.decoder = VAEDecoder(latent_size, hidden_size, message_dim, section_size)\n",
     "        \n",
@@ -263,8 +265,12 @@
     "        z = z_mean + eps*z_std\n",
     "        logits = self.decoder(z, message_embed)\n",
     "\n",
-    "        return torch.nn.functional.cross_entropy(logits.view(-1, self.message_dim), messages.flatten()) - \\\n",
-    "               kld_weight*0.5*torch.sum(1 + z_logvar - z_mean*z_mean - torch.exp(z_logvar))\n",
+    "        slack = 33 # nats\n",
+    "        kld = -0.5*torch.sum(1 + z_logvar - z_mean*z_mean - torch.exp(z_logvar), dim=2)\n",
+    "        kld_loss = torch.max(kld - slack, torch.zeros(kld.shape).to(dev))\n",
+    "\n",
+    "        return torch.nn.functional.cross_entropy(logits.view(-1, self.message_dim), messages.flatten()) + \\\n",
+    "               kld_weight*kld_loss.mean()\n",
     "    \n",
     "    # Reconstruct messages\n",
     "    def reconstruct(self, messages):\n",
@@ -282,7 +288,7 @@
     "    \n",
     "        # Was using teacher forcing before\n",
     "        #logits = self.decoder(z, message_embed).view(-1, self.message_dim)\n",
-    "        #return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1).flatten()\n",
+    "        #return torch.multinomial(torch.nn.functional.softmax(logits, dim=1), 1)\n",
     "    \n",
     "    # Interpolate between the two sequences and produce a mashup (hopefully lol)\n",
     "    def interpolate(self, messages1, messages2, weight1):\n",
@@ -310,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,10 +331,10 @@
     "message_dim = 2*num_notes + num_time_shifts\n",
     "hidden_size = 1024\n",
     "latent_size = 512\n",
-    "section_size = 200\n",
+    "section_size = 50\n",
     "\n",
     "# Checkpoint location\n",
-    "checkpoint_dir = 'baseline_vae_checkpoints'\n",
+    "checkpoint_dir = 'tiny_vae_checkpoints'\n",
     "\n",
     "train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "test_dataloader = torch.utils.data.DataLoader(test_data, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
@@ -439,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -448,19 +454,19 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = BaselineVAE(message_dim, hidden_size, latent_size, section_size).to(dev)\n",
-    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch9.pth', map_location=dev))"
+    "model.load_state_dict(torch.load(checkpoint_dir + '/epoch7.pth', map_location=dev))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,24 +488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('baseline_vae_midis/sample.npy', np.array(generated_music))"
+    "np.save('tiny_vae_midis/sample.npy', np.array(generated_music))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test reconstruction\n",
-    "original = train_data[50].unsqueeze(1)\n",
+    "original = train_data[0].unsqueeze(1)\n",
     "reconstruction = model.reconstruct(original) # Should sound roughly the same as the original\n",
-    "np.save('baseline_vae_midis/original50.npy', original.flatten().detach().numpy())\n",
-    "np.save('baseline_vae_midis/reconstruction50.npy', np.array(reconstruction))"
+    "np.save('tiny_vae_midis/original0.npy', original.flatten().detach().numpy())\n",
+    "np.save('tiny_vae_midis/reconstruction0.npy', np.array(reconstruction))"
    ]
   },
   {
